unpackaged/main/default/objects/SAP_Company_Code__c/SAP_Company_Code__c.object-meta.xml
<CustomObject>
    <description>Object used to store company code status for the vendor feed.</description>
    <label>SAP Company Code</label>
    <nameField>
        <label>SAP Company Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Company Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>