unpackaged/main/default/objects/SAP_Company_Code__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAP Company Codes</relationshipLabel>
    <relationshipName>SAP_Company_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>