unpackaged/main/default/objects/SAP_Company_Code__c/fields/SAP_Vendor__c.field-meta.xml
<CustomField>
    <fullName>SAP_Vendor__c</fullName>
    <label>SAP Vendor #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>