unpackaged/main/default/objects/SAP_Company_Code__c/fields/VendorCompanycodeKey__c.field-meta.xml
<CustomField>
    <fullName>VendorCompanycodeKey__c</fullName>
    <externalId>true</externalId>
    <label>VendorCompanycodeKey</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>